# nanofaas

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  MILESTONES.md  README.md  aggiunta_snapshot.txt  build.gradle  docsdk.md  gradle.properties  openapi.yaml  pytest.ini  settings.gradle
examples/python/roman-numeral/: Dockerfile  function.yaml  pyproject.toml
experiments/wizard/: experiment.py  pyproject.toml
function-sdk-python/: README.md  pyproject.toml
function-sdk-python/src/nanofaas/runtime/: app.py
function-sdk-python/src/nanofaas/sdk/: context.py  decorator.py  logging.py
function-sdk-python/tests/: test_docstrings.py  test_json_transform.py  test_runtime.py  test_sdk_foundation.py
scripts/image-builder/: image_builder.py  pyproject.toml
scripts/image-builder/tests/: test_image_builder.py
scripts/release-manager/: README.md  pyproject.toml  release.py
tooling/controlplane_tui/: README.md  pyproject.toml
tooling/controlplane_tui/assets/k6/: tool-metrics-echo.js
tooling/controlplane_tui/src/controlplane_tool/: adapters.py  control_plane_runtime.py  main.py  metrics.py  mockk8s.py  mockk8s_server.py  models.py  pipeline.py  profiles.py  prometheus_runtime.py  tui.py
tooling/controlplane_tui/tests/: test_adapters_k6_url.py  test_adapters_metrics_prometheus_bootstrap.py  test_docs_links.py  test_metrics_validation.py  test_mockk8s.py  test_pipeline.py  test_profiles.py  test_report.py  test_sut_preflight.py  test_tui_choices.py
tools/controlplane/: .importlinter  CONVENTIONS.md  README.md  diagnose_proxmox_ssh.py  prefect.yaml  pyproject.toml
tools/controlplane/assets/k6/: autoscaling.js  two-vm-function-invoke.js
tools/controlplane/docs/plans/: 2026-05-06-stabilize-task-model-before-extraction.md  2026-05-06-task-extraction-readiness.md  2026-05-07-remove-legacy-cli-consumers.md  2026-05-12-decouple-task-executors-adapters.md
tools/controlplane/profiles/: azure.toml  azure.toml.example  demo-java.toml  demo-javascript.toml  proxmox.toml.example
tools/controlplane/scenarios/: azure-vm-loadtest-java.toml  container-local-smoke.toml  k8s-demo-all.toml  k8s-demo-java.toml  k8s-demo-javascript.toml  two-vm-loadtest-java.toml
tools/controlplane/scenarios/payloads/: echo-sample.json  json-transform-sample.json  word-stats-sample.json
tools/controlplane/src/controlplane_tool/: __init__.py  adapters.py  ansible_adapter.py  build_requests.py  build_tasks.py  cli_commands.py  cli_e2e_commands.py  cli_host_runner.py  cli_runtime.py  cli_stack_runner.py  cli_test_catalog.py  cli_test_commands.py  cli_test_models.py  cli_test_runner.py  cli_vm_runner.py  command_resolver.py  console.py  container_local_runner.py  control_plane_api.py  control_plane_runtime.py  deploy_host_runner.py  e2e_catalog.py  e2e_commands.py  e2e_models.py  e2e_runner.py  flow_catalog.py  function_catalog.py  function_commands.py  gradle_ops.py  gradle_planner.py  grafana_runtime.py  helm_ops.py  helm_stack_runner.py  image_ops.py  infra_flows.py  k3s_curl_runner.py  k3s_e2e_commands.py  k3s_runtime.py  k6_ops.py  loadtest_bootstrap.py  (+58 more)
tools/controlplane/tests/: conftest.py  test_adapters_facade.py  test_adapters_k6_url.py  test_adapters_metrics_prometheus_bootstrap.py  test_ansible_adapter.py  test_ansible_playbooks.py  test_architecture_docs.py  test_autoscaling_tasks.py  test_azure_config.py  test_azure_prelude_argv.py  test_azure_vm_loadtest_components.py  test_azure_vm_loadtest_runner.py  test_azure_vm_request.py  test_build_requests.py  test_build_tasks.py  test_canonical_entrypoints.py  test_cli_commands.py  test_cli_host_workflow.py  test_cli_run_behavior.py  test_cli_runtime.py  test_cli_smoke.py  test_cli_stack_workflow.py  test_cli_test_catalog.py  test_cli_test_commands.py  test_cli_test_models.py  test_cli_test_runner.py  test_cli_vm_workflow.py  test_command_resolver.py  test_component_registry.py  test_component_registry_integration.py  test_connectivity.py  test_console_workflow.py  test_control_plane_api.py  test_control_plane_runtime_lifecycle.py  test_docs_links.py  test_e2e_catalog.py  test_e2e_commands.py  test_e2e_models.py  test_e2e_runner.py  test_fake_sink_fixture.py  (+121 more)
tools/controlplane/tests/tasks/: test_functions_tasks.py  test_loadtest_tasks.py  test_vm_tasks.py
tools/fn-init/: pyproject.toml
tools/fn-init/src/fn_init/: __init__.py  generator.py  main.py  wizard.py
tools/fn-init/tests/: __init__.py  test_generator.py  test_javascript_scaffold_contract.py
tools/tui-toolkit/: .importlinter  README.md  pyproject.toml
tools/tui-toolkit/src/tui_toolkit/: __init__.py  brand.py  chrome.py  console.py  context.py  events.py  pickers.py  theme.py  workflow.py
tools/tui-toolkit/tests/: conftest.py  test_brand.py  test_chrome.py  test_console.py  test_context.py  test_events.py  test_pickers.py  test_public_api.py  test_smoke.py  test_theme.py  test_workflow_events.py  test_workflow_render.py
tools/tui-toolkit/tests/golden/: legacy_questionary_style.txt  legacy_render_cancelled.txt  legacy_render_completed.txt  legacy_render_failed.txt  legacy_render_log_stderr.txt  legacy_render_phase.txt  legacy_render_running.txt  legacy_render_warning.txt
tools/workflow-tasks/: .coverage  .importlinter  pyproject.toml
tools/workflow-tasks/src/workflow_tasks/: __init__.py  shell.py
tools/workflow-tasks/tests/: conftest.py  test_package_boundaries.py  test_public_api.py  test_shell.py
tools/workflow-tasks/tests/components/: test_bootstrap.py  test_cleanup.py  test_context.py  test_function_tasks.py  test_helm.py  test_images.py  test_models.py  test_namespace.py  test_operations.py  (+4 more)
watchdog/: Cargo.toml  Dockerfile  Dockerfile.combined  Dockerfile.simple  README.md  build.sh  test-local.sh  test.sh
watchdog/src/: main.rs
watchdog/tests/: Dockerfile.test
watchdog/tests/fixtures/: callback_server.py  file_env_echo.sh  file_handler.sh  http_server.py  stdio_handler.py
watchdog/tests/integration/: run_all.sh  test_callback.sh  test_file_mode.sh  test_helpers.sh  test_http_mode.sh  test_metrics.sh  test_stdio_mode.sh  test_warm_mode.sh
(+1851 files in other folders)
