[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanofaas-sdk"
version = "0.1.0"
description = "SDK for developing Python functions on nanoFaaS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0", "httpx>=0.24.0"]
