[package]
name = "nanofaas-watchdog"
version = "0.5.0"
edition = "2021"
description = "Lightweight watchdog for nanofaas function containers"
authors = ["nanofaas"]

[dependencies]
tokio = { version = "1", features = ["rt", "process", "time", "signal", "macros", "fs", "io-util", "sync", "net"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
nix = { version = "0.27", features = ["signal", "process"] }
axum = "0.7"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Abort on panic (smaller binary)
strip = true        # Strip symbols
