[project]
name = "nanofaas-control-plane-experiment"
version = "0.1.0"
description = "Interactive wizard for control-plane native module experiments on k3s"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
