[project]
name = "nanofaas-image-builder"
version = "0.1.0"
description = "Interactive CLI to build and push nanoFaaS images"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.0.1",
    "rich>=13.7.0",
]

[project.scripts]
image-builder = "image_builder:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
