[project]
name = "controlplane-tool"
version = "0.1.0"
description = "Local TUI orchestrator for control-plane build and tests"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.5",
    "questionary>=2.1.1",
    "pydantic>=2.9.2",
    "jinja2>=3.1.4",
    "plotly>=5.24.1",
    "tomli-w>=1.0.0",
]

[project.scripts]
controlplane-tool = "controlplane_tool.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
