[project]
name = "controlplane-tool"
version = "0.1.0"
description = "Control-plane orchestration product for build, test, and reporting"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.5",
    "questionary>=2.1.1",
    "pydantic>=2.9.2",
    "jinja2>=3.1.4",
    "plotly>=5.24.1",
    "tomli-w>=1.0.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0.2",
    "flask>=3.0",
    "rich>=13.8",
    "multipass-sdk @ git+https://github.com/miciav/multipass-sdk.git@83b3704",
    "prefect>=3,<4",
    "shellcraft @ git+https://github.com/miciav/shellcraft.git",
    "tui-toolkit",
]

[project.scripts]
controlplane-tool = "controlplane_tool.app.main:main"
controlplane-package-report = "controlplane_tool.devtools.package_report:main"
controlplane-quality = "controlplane_tool.devtools.quality:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "grimp>=3.14",
    "import-linter>=2.11",
    "pydeps>=3.0.6",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.uv.sources]
tui-toolkit = { path = "../tui-toolkit", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "SLF"]

[tool.ruff.lint.per-file-ignores]
"src/controlplane_tool/cli_validation/cli_host_runner.py" = ["SLF001"]
"src/controlplane_tool/cli_validation/cli_test_runner.py" = ["SLF001"]
"src/controlplane_tool/e2e/e2e_runner.py" = ["SLF001"]
"src/controlplane_tool/tui/app.py" = ["SLF001"]
"tests/**/*.py" = ["F841", "SLF001"]

[tool.basedpyright]
include = [
    "src/controlplane_tool/app/main.py",
    "src/controlplane_tool/building",
    "src/controlplane_tool/cli/commands.py",
    "src/controlplane_tool/devtools/quality.py",
    "src/controlplane_tool/orchestation/flow_catalog.py",
    "src/controlplane_tool/orchestation/infra_flows.py",
    "src/controlplane_tool/tasks",
    "src/controlplane_tool/tui/workflow.py",
    "src/controlplane_tool/tui/workflow_controller.py",
]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateUsage = false
