[project]
name = "fn-init"
version = "0.1.0"
description = "Function scaffolding tool for nanofaas"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.8",
    "typer>=0.12.5",
]

[project.scripts]
fn-init = "fn_init.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
