[project]
name = "tui-toolkit"
version = "0.1.0"
description = "Reusable terminal UI widgets and workflow event renderer with a unified theme model."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.8",
    "questionary>=2.1.1",
    "prompt-toolkit>=3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tui_toolkit = ["py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
