[project]
name = "tui-toolkit"
version = "0.1.0"
description = "Reusable terminal UI widgets and workflow event renderer with a unified theme model."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.8",
    "questionary>=2.1.1",
    "prompt-toolkit>=3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tui_toolkit = ["py.typed"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "grimp>=3.14",
    "import-linter>=2.11",
    "pydeps>=3.0.6",
    "pytest>=8.3.4",
    "pytest-cov>=6.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=tui_toolkit --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["*/tui_toolkit/pickers.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "SLF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F841", "F401", "SLF001"]
"src/tui_toolkit/console.py" = ["SLF001"]
"src/tui_toolkit/pickers.py" = ["SLF001"]

[tool.basedpyright]
include = ["src/tui_toolkit"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateUsage = false
