# tools/workflow-tasks/pyproject.toml
[project]
name = "workflow-tasks"
version = "0.1.0"
description = "Task execution primitives and workflow event infrastructure. No external dependencies."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
workflow-tasks-quality = "workflow_tasks.devtools.quality:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
workflow_tasks = ["py.typed"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "grimp>=3.14",
    "import-linter>=2.11",
    "pydeps>=3.0.6",
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=workflow_tasks --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "SLF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F841", "SLF001"]

[tool.basedpyright]
include = ["src/workflow_tasks"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateUsage = false
