[project]
name = "roman-numeral"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["nanofaas-sdk"]

[dependency-groups]
dev = ["pytest>=7.4.0"]

[tool.uv.sources]
nanofaas-sdk = { path = "../../../function-sdk-python" }

[tool.pytest.ini_options]
pythonpath = [".", "../../../function-sdk-python/src"]
testpaths = ["tests"]
